@@ -1,3 +1,6 @@
+2014-09-22 Sherine Awad <sherine.awad@gmail.com>
+    * scripts/normalize-by-median.py: catch expections generated by wrong indentation for 'total'
+
 2014-09-10  Titus Brown  <titus@idyll.org>
 
     * sandbox/calc-median-distribution.py: catch exceptions generated by reads
